--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<div class="container">
 		<div class="card-white" id="introduction"> 	
 		<h1>Hello, I'm Matthias Amiel</h1>
-		<img src="images/profile.png" class="img-circle"alt="Matthias Amiel">
+			<img src="images/profile.png" class="img-circle" alt="Matthias Amiel">
 		<p>
 		My name is Matthias Amiel; I am a French student attending ESSEC Business School in Singapore. I am currently looking for an internship in Singapore, feel free to connect with me on LinkedIn. 
 		</p>
@@ -61,7 +61,7 @@
 			</a>
 		</li>
 		<li>
-			<a href="https://www.instagram.com/?hl=fr" target="_blank">
+			<a href="https://www.instagram.com/matthiasamiel/?hl=fr" target="_blank">
 				<i class="fab fa-instagram-square"></i>
 			</a>
 		</li> 
